...
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageMatch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/buttonMatchMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:background="@drawable/round"
            android:text="Enviar Mensagem" />

        <Button
            android:id="@+id/buttonContinueSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
...
