<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="Início" />
        <item
            android:id="@+id/nav_likes"
            android:title="Minhas Curtidas" />
    </group>

    <item android:title="Parceiro">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:title="Adicionar Pet" />
            <item
                android:id="@+id/nav_my_pets"
                android:title="Meus Pets" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="Sair" />
        </menu>
    </item>

</menu>
