<resources>
    <string name="app_name">PetFunding</string>
    <string name="fbButtonLogin">Login com o Facebook</string>
    <string name="facebook_app_id">960747287393872</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
...
